clientes-service/kubefiles/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: clientes-namespace
  labels:
    name: clientes-namespace
