clientes-service/kubefiles/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientes-app-blue
  namespace: money-app
  labels:
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientes-app
      namespace: money-app
  template:
    metadata:
      labels:
        app: clientes-app
        namespace: money-app
        version: blue
    spec:
      containers:
        - name: clientes-app
          image: wjcarrer/clientes-service:blue
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
