clientes-service/kubefiles/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: clientes-service
  namespace: clientes-namespace
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app: clientes-app
    namespace: clientes-namespace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientes-app
  namespace: clientes-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientes-app
      namespace: clientes-namespace
  template:
    metadata:
      labels:
        app: clientes-app
        namespace: clientes-namespace
    spec:
      containers:
        - name: clientes-app
          image: wjcarrer/clientes-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
