clientes-service/kubefiles/service.yml
apiVersion: v1
kind: Service
metadata:
  name: clientes-service
  namespace: money-app
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app: clientes-app
    namespace: money-app
